--- a/Templates/Templates.cbp
+++ b/Templates/Templates.cbp
@@ -2,28 +2,26 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Polymorphism" />
+		<Option title="Templates" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Polymorphism" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Templates" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="/home/george/codeblock-docs/Polymorphism/" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Polymorphism" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Templates" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add directory="/home/george/codeblock-docs/Polymorphism/" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -34,12 +32,6 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="Enemy.cpp" />
-		<Unit filename="Enemy.h" />
-		<Unit filename="Monster.cpp" />
-		<Unit filename="Monster.h" />
-		<Unit filename="Ninja.cpp" />
-		<Unit filename="Ninja.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
